...
"user_gender_not_listed" = "Gender not listed";
"user_gender_not_state" = "Prefer not to state";
"user_i_agree" = "I agree";
"user_optional" = "Optional";

// SETTINGS
"settings_title" = "Settings";
"settings_terms" = "Terms & Conditions";
"settings_privacy" = "Privacy Policy";
"settings_conduct" = "Code of Conduct";
"settings_accessibility" = "Accessibility";
"settings_logout" = "Log out";
"settings_ready_logout" = "Ready to Log Out?";
"settings_ready_logout_info" = "Are you sure you want to log out?";
"settings_turned_on" = "Turned On";
"settings_turned_off" = "Turned Off";
"settings_child_seat" = "Child Seat";
"settings_wheelchair" = "Wheelchair";
"accessibility_not_available" = "Accessibility not available on your location. We hope to bring Circuit accessibility options to you very soon.";
...
"ride_unable_to_locate" = "Unable to Locate";
"ride_unable_to_locate_pickup_info" = "We were unable to find a pickup address associated with the information you've entered. Please try a different address.";
"ride_unable_to_locate_dropoff_info" = "We were unable to find a dropoff address associated with the information you've entered. Please try a different address.";
"ride_address_missing" = "Address Missing";
"ride_address_missing_info" = "Please make sure to fill out both pickup and dropoff.";
"ride_too_soon" = "Too Soon!";
"ride_yes_cancel" = "Yes, Cancel";
"ride_cancel_request_info" = "If you cancel and wish to request again, you will lose your spot in the queue.";
"ride_Ill_wait" = "No, I'll wait";
"ride_cancel_reason" = "We're sorry that you had to cancel your ride.\nCan you please let us know the reason?";
"ride_driver_on_the_way" = "Heading your way";
"ride_driver_on_the_way_info" = "You're already connected with a driver, if you cancel now you'll have to wait three minutes before you can request another ride.";
"ride_no_drivers" = "No Drivers Available";
...
"Cancel Ride" = "Cancel Ride";
"Log In" = "Log In";
"Sign Up" = "Sign Up";
"and" = "and";
"You need to update Circuit app to the latest version in order to request rides" = "You need to update Circuit app to the latest version in order to request rides";
"Invalid Submission" = "Invalid Submission";
"Email address is not valid" = "Email address is not valid";
"Mobile phone number is not valid" = "Mobile phone number is not valid";
"Password must be at least 8 characters" = "Password must be at least 8 characters";
"Password must contain at least 1 uppercase letter" =  "Password must contain at least 1 uppercase letter";
"Password must contain at least 1 special character" = "Password must contain at least 1 special character";
"Password must contain at least 1 number" = "Password must contain at least 1 number";
"This field" = "This field";
...
